New e2eml achievement

--- a/index.html
+++ b/index.html
@@ -402,14 +402,14 @@
           <div class="work-box">
             <a href="img/python.jp" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/python.jpg" alt="" class="img-fluid">
+                <img src="img/e2eml.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">IBM</h2>
+                    <h2 class="w-title">End to End Machine Learning</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Python</span> / <span class="w-date">2020</span>
+                      <span class="w-ctegory">E2EML</span> / <span class="w-date">2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
