--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/python.jp" data-lightbox="gallery-mf">
+            <a href="img/e2eml.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="img/e2eml.jpg" alt="" class="img-fluid">
               </div>
