Added on-going projects section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-code-working"></i></span>
+              <span class="ico-circle"><i class="ion-monitor"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Junior ML Engineer</h2>
@@ -208,7 +208,7 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-code-working"></i></span>
+              <span class="ico-circle"><i class="ion-ios-people"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Volunteering</h2>
@@ -427,7 +427,78 @@
     </div>
   </section>
   <!--/ Section Portfolio End /-->
+<section id="service" class="services-mf route">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="title-box text-center">
+            <h3 class="title-a">
+              ON GOING PROJECTS
+            </h3>
+            <p class="subtitle-a">
+              This section includes courses and projects I'm working on to upskill my knowledge and talent:
+            </p>
+            <div class="line-mf"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-monitor"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Machine Learning for Production(MLOPS) Specialization</h2>
+              <p class="s-description text-center">
+                <b>4 part online course by Coursera and deeplearning.ai</b> <li>Introduction to Machine Learning Production.(Completed)</li>
+                <li>Machine Learning Data Lifecycle in Production</li>
+                <li>Machine Learning Modeling Pipelines in Production</li>
+                <li>Deploying Machine Learning Models in Production</li>
+              </p>
+            </div>
+          </div>
+        </div>
 
+
+
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-code-working"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">END-END MACHINE LEARNING</h2>
+              <p class="s-description text-center">
+                <b>Advanced Neural Network Methods</b> 
+                <li>Developing algorithms and neural net frameworks from scratch using python's power of modularization.</li>
+                <li>Incorporating Different Regularizers and Optimizers with in-depth mathematical understanding.</li>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-ios-people"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">FUNDAMENTALS OF DEEP-LEARNING</h2>
+              <p class="s-description text-center">
+                <b>Nvidia Deep Learning Institute</b> 
+                <li>Comprehensive understanding of deep learning Frameworks-eg Tensorflow,Keras.</li>
+                <li>Train Convolutional Neural Networks(CNNs) and Recurrent Neural Networks(RNNs) based on recent scientific research.</li>
+
+                <li>Building data generators and combining transfer learning techniques.</li>
+              </p>
+            </div>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </section>
   <!--/ Section Testimonials Star /-->
   <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
@@ -573,6 +644,7 @@
                     <ul>
                       <li><a href="https://github.com/WangariKimotho"><span class="ico-circle"><i class="ion-social-github"></i></span>Github</a></li>
                       <li><a href="https://www.linkedin.com/in/kimotho-lucy-wangari/"><span class="ico-circle"><i class="ion-social-linkedin"></i></span>LinkedIn</a></li>
+                      <li> <a href="https://www.codewars.com/users/WangariKimotho/"> <span class="ico-circle" ><i class="ion-social-codewars"></i></span> Codewars</a></li>
                     </ul>
                   </div>
                 </div>
