Replaced codewars with my medium contact

--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                     <ul>
                       <li><a href="https://github.com/WangariKimotho"><span class="ico-circle"><i class="ion-social-github"></i></span>Github</a></li>
                       <li><a href="https://www.linkedin.com/in/kimotho-lucy-wangari/"><span class="ico-circle"><i class="ion-social-linkedin"></i></span>LinkedIn</a></li>
-                      <li> <a href="https://www.codewars.com/users/WangariKimotho/"> <span class="ico-circle" ><i class="ion-social-codewars"></i></span> Codewars</a></li>
+                      <li> <a href="https://medium.com/@Kimosh"> <span class="ico-circle" ><i class="ion-social-Medium"></i></span> Medium</a></li>
                     </ul>
                   </div>
                 </div>
