updated softskills on main page.

--- a/index.html
+++ b/index.html
@@ -140,11 +140,10 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    1 year of combined research and industrial engagement in the field of data science. Highly analytical,curious and performance-oriented data scientist with in-depth knowledge in mathematical concepts and formulations, and a dynamic data scientist. I am also a certified cloud practitioner with AWS Cloud which equips me with skills to store big data, deploy machine learning model and perform analysis on the AWS cloud.
+                    A year of combined research and industrial engagement in the field of data science. Highly analytical,curious and performance-oriented data scientist with in-depth knowledge in mathematical concepts and formulations, and a dynamic data scientist. I am also a certified cloud practitioner with AWS Cloud which equips me with skills to store big data, deploy machine learning model and perform analysis on the AWS cloud.
                   </p>
                   <p class="lead">
-                    Currently a part-time Junior Machine Learning Engineer at <a href="https://omdena.com/">OMDENA</a> 
-                       .Graduated with MSc Mathematical Modelling for Climate from <a href="https://aims-cameroon.org/" target="_blank">African Institute for Mathematical Sciences, Cameroon</a> in 2021. I obtained BSc in Industrial Mathematics in 2019 from <a href="http://www.jkuat.ac.ke/" target="_blank">Jomo Kenyatta University of Agriculture and Technology, Kenya</a>. I am also currently involved in a voluntary project with  <a href="https://theafricaiknow.org/" target="_blank">TAIK</a> where we create content to bring African stories and projects in STEM to the limelight.
+                    As per my personality, I am curious, an acute observer and listener, analytical, open-minded and a 'natural' researcher. My talent and work ethic has demonstrated that I have great written and oral communication and presentation skills, I give keen attention to detail, pro-active team participant, team leader, integrious and teachable.
                   </p>
                   <!-- <p class="lead">
                     Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
@@ -183,6 +182,7 @@
               <span class="ico-circle"><i class="ion-monitor"></i></span>
             </div>
             <div class="service-content">
+              <h8>Current</h8>
               <h2 class="s-title">Junior ML Engineer</h2>
               <p class="s-description text-center">
                 <li> <b>Omdena&Ceretai</b>: Ethnicity detection using computer vision tools on images and videos. </li>
@@ -451,8 +451,8 @@
             <div class="service-content">
               <h2 class="s-title">Machine Learning for Production(MLOPS) Specialization</h2>
               <p class="s-description text-center">
-                <b>4 part online course by Coursera and deeplearning.ai</b> <li>Introduction to Machine Learning Production.(Completed)</li>
-                <li>Machine Learning Data Lifecycle in Production</li>
+                <b>4 part online course by Coursera and deeplearning.ai</b> <li>Introduction to Machine Learning Production.<b>(Completed)</b></li>
+                <li>Machine Learning Data Lifecycle in Production. (<b>Current</b>)</li> 
                 <li>Machine Learning Modeling Pipelines in Production</li>
                 <li>Deploying Machine Learning Models in Production</li>
               </p>
@@ -484,11 +484,12 @@
               <span class="ico-circle"><i class="ion-ios-people"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">FUNDAMENTALS OF DEEP-LEARNING</h2>
+              <h2 class="s-title">Working with geospatial data in python</h2>
               <p class="s-description text-center">
-                <b>Nvidia Deep Learning Institute</b> 
-                <li>Comprehensive understanding of deep learning Frameworks-eg Tensorflow,Keras.</li>
-                <li>Train Convolutional Neural Networks(CNNs) and Recurrent Neural Networks(RNNs) based on recent scientific research.</li>
+                <b>Datacamp course</b> 
+                <li>Vector data exploration and manipulation.</li>
+                <li>Spatial relationships in geospatial data.</li>
+                <li>Projecting and transforming geometries in geospatial data.</li>
 
                 <li>Building data generators and combining transfer learning techniques.</li>
               </p>
