updated to current status

--- a/index.html
+++ b/index.html
@@ -183,6 +183,22 @@
             </div>
             <div class="service-content">
               <h8>Current</h8>
+              <h2 class="s-title">Machine Learning Intern</h2>
+              <p class="s-description text-center">
+                <li> <b>Manobi Africa</b>: Quality Control in digital field data using Computer vision and Earth Observation tools</li>
+                
+                <li><b>MS4CR Intern</b>: Mathematical Sciences for Climate Resilience(MS4CR) partnership between AIMS and Manobi Africa, Dakar Senegal</li>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-monitor"></i></span>
+            </div>
+            <div class="service-content">
+              <h8>08/10/2021 - 02/04/2022</h8>
               <h2 class="s-title">Junior ML Engineer</h2>
               <p class="s-description text-center">
                 <li> <b>Omdena&Ceretai</b>: Ethnicity detection using computer vision tools on images and videos. </li>
@@ -211,10 +227,11 @@
               <span class="ico-circle"><i class="ion-ios-people"></i></span>
             </div>
             <div class="service-content">
+
               <h2 class="s-title">Volunteering</h2>
               <p class="s-description text-center">
-                <li><b>The Africa I Know(TAIK)</b>: Project lead, content creator, for TAIK in a bid to increase awareness on African stories and projects in STEM. <a href="https://www.linkedin.com/posts/theafricaiknow_welcome-to-taik-wangari-looking-forward-activity-6829893928297353216-2J9w">Link</a></li>
-                <li><b>Hackmakers Regional Ambassador</b>: Kenyan Regional Ambassador for the FormulaAI hack in 2022 by Hackmakers. <a href="https://www.formulaaihack.com/">Link</a></li>
+                <li><b>The Africa I Know(TAIK)<h8>Ongoing</h8></b>: Project lead, content creator, for TAIK in a bid to increase awareness on African stories and projects in STEM. <a href="https://www.linkedin.com/posts/ <h8>Ongoing</h8>theafricaiknow_welcome-to-taik-wangari-looking-forward-activity-6829893928297353216-2J9w" >Link</a></li>
+                <li><b>Hackmakers Regional Ambassador  <h8>Jan-March 2022</h8></b>: Kenyan Regional Ambassador for FormulaAI hack by Hackmakers. <a href="https://www.formulaaihack.com/">Link</a></li>
               </p>
               <!-- <p class="s-description text-center">
                 
@@ -451,9 +468,10 @@
             <div class="service-content">
               <h2 class="s-title">Machine Learning for Production(MLOPS) Specialization</h2>
               <p class="s-description text-center">
-                <b>4 part online course by Coursera and deeplearning.ai</b> <li>Introduction to Machine Learning Production.<b>(Completed)</b></li>
-                <li>Machine Learning Data Lifecycle in Production. (<b>Current</b>)</li> 
-                <li>Machine Learning Modeling Pipelines in Production</li>
+                <b>4 part online course by Coursera and deeplearning.ai</b> 
+                <li>Introduction to Machine Learning Production.<b>(Completed)</b></li>
+                <li>Machine Learning Data Lifecycle in Production. (<b>Completed</b>)</li> 
+                <li>Machine Learning Modeling Pipelines in Production(<b>Current</b>)</li>
                 <li>Deploying Machine Learning Models in Production</li>
               </p>
             </div>
@@ -484,14 +502,12 @@
               <span class="ico-circle"><i class="ion-ios-people"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Working with geospatial data in python</h2>
+              <h2 class="s-title">AI_ACCELERATOR AFRICA</h2>
               <p class="s-description text-center">
-                <b>Datacamp course</b> 
-                <li>Vector data exploration and manipulation.</li>
-                <li>Spatial relationships in geospatial data.</li>
-                <li>Projecting and transforming geometries in geospatial data.</li>
-
-                <li>Building data generators and combining transfer learning techniques.</li>
+                <b>Codecademy & Masterclass coaching</b> 
+                <li>Data science portfolio projects</li>
+                <li>Datascience research and industry coaching</li>
+                <li>Masterclass tutorials and webinars</li>
               </p>
             </div>
           </div>
