Modified again as per August 2022

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <div class="service-content">
               <h2 class="s-title">AIMS-CAMEROON</h2>
               <p class="s-description text-center">
-                <b> Structured Masters in Mathematical Modeling for Climate</b> Domains: Climate Modeling using Fortran and Ferret, Mathematical Modeling for Climate using data Science and deep Learning techniques.
+                <b> Structured Masters in Mathematical Modeling for Climate</b> Domains: Climate Modeling using Fortran,Ferret,R; Mathematical Modeling for Climate using data Science and deep Learning techniques.
               
               </p>
             </div>
