--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@
                     </h5>
                   </div>
                   <p class="lead"><h6></h6>
-                    Over two years of combined research and industrial engagement in the practical field of data science applied in humanitarian organisations,agriculture,research,and telecommunication. </p>
+                    Over four years of combined research and industrial engagement in the practical field of data science applied in humanitarian organisations,agriculture,research,and telecommunication. </p>
                     <p>
-                    I have in-depth knowledge of mathematical formulation of concepts and their implentation using computer science techniques making me a dynamic data scientist. I also have experience working in the GIS field which primarily leverages geographic and satellite data to inform decisions for work on the ground.I am also a certified cloud practitioner with AWS Cloud which equips me with skills to store big data, deploy machine learning models and perform analysis on the cloud.</p>
+                    I have in-depth knowledge of mathematical formulation of concepts and their implentation using data structures and algorithms techniques making me a dynamic data scientist. I have also gained experience working within geospatial projects, managing both vector and raster data to inform decisions for work in the field. I have gained certification in cloud computing with AWS Cloud which equips me with skills to store big data, deploy machine learning models and perform analysis on the cloud.</p>
+                  <p> I have a strong personal interest in geospatial work, I have most recently given talks on building a geospatial community using open source tools like QGIS and GEE which provide automation and cartographic capabilities. I am part of <a href="https://thespatialcommunity.org">The Spatial Community</a> where I learn and get GIS inspiration everyday.</p>
                     <p>
                     I have worked with teams on site and virtually and in both cases have been an active collaborator meeting all outlined goals to their feasibility.
                   </p>
@@ -190,17 +191,17 @@
               <span class="ico-circle"><i class="ion-monitor"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Data & Geospatial Analyst II</h2>
+              <h2 class="s-title">Data Scientist</h2>
               <p class="s-description text-center">
 
 
-                <h8>01/02/2023 - Current</h8>
+                <h8>2023 - 2025</h8>
                 <li> <b>Catholic Relief Services</b>: 
                  <p> Food Price Forecasting: Data collection and preparation using Python for use in Power BI Dashboard. Acquiring data from web sources as well curating a deep learning neural networks model for timeseries forecasting from historical data achieving less than 10% error rate.<p
 
                  <p>GIS: Using satellite imagery to perform damage assessment over a war-striken area in Ukraine. Geospatial analysis using ArcGIS, QGIS for mapping,visualization and reporting.</p>
                   
-                 <p>Land Use Land cover using state of the art datasets from Google's Dynamic World dataset and GIS techniques to monitor watersheds in Ethiopia.</p>
+                 <p>Land Use Land cover using state of the art datasets from Google's Dynamic World dataset and GIS techniques to monitor agricultural watersheds in Ethiopia.</p>
 
               </p>
             </div>
@@ -264,6 +265,7 @@
               <p class="s-description text-center">
                 <li><b><a href="https://arxiv.org/abs/2304.09972">Masakhane</a><h8>Ongoing</h8><b> I support researchers who are looking to advance the representation and recognition of African languages in the digital space.</li>
                 <li><b>The Africa I Know(TAIK)<h8>Ongoing</h8></b>: Project lead, content creator, for TAIK in a bid to increase awareness on African stories and projects in STEM. <a href="https://www.theafricaiknow.org/people">Link</a></li>
+                  <li><b>Open Street Map and Google Maps contribution<h8>Ongoing</h8></b>: I appreciate having places on google maps and open street maps named in their proper native names </li>
                 
               </p>
               <!-- <p class="s-description text-center">
@@ -335,7 +337,7 @@
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-3 col-lg-3">
+<!--         <div class="col-sm-3 col-lg-3">
           <div class="counter-box">
             <div class="counter-ico">
               <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
@@ -345,14 +347,14 @@
               <span class="counter-text">WORKS COMPLETED</span>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-sm-3 col-lg-3">
           <div class="counter-box pt-4 pt-md-0">
             <div class="counter-ico">
               <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">2</p>
+              <p class="counter">4</p>
               <span class="counter-text">YEARS OF EXPERIENCE</span>
             </div>
           </div>
